# CanbanHTMX

./: data.db  main.py  pyproject.toml  tailwind.config.js
lib/: db.py
templates/: homepage.html  index.html  login.html
templates/components/: my-boards.html
