[project]
name = "canbanhtmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
]
